--- a/plano/templates/circuferencias.html
+++ b/plano/templates/circuferencias.html
@@ -12,62 +12,66 @@
         <h1>Paciente</h1>
         <p>Nome: {{ paciente.nome }}</p>
         <h2>Medidas</h2>
-        <div class="table-responsive">
-            <table class="table table-dark">
-                <thead class="flex-column">
-                    <tr>
-                        
-                        <th scope="col">Pescoço</th>
-                        <th scope="col">Ombro</th>
-                        <th scope="col">Torax</th>
-                        <th scope="col">Braco Direito</th>
-                        <th scope="col">Braco Esquerdo</th>
-                        <th scope="col">Braco Direito Contraido</th>
-                        <th scope="col">Braco Esquerdo Contraido</th>
-                        <th scope="col">Antebraco Direito</th>
-                        <th scope="col">Antebraco Esquerdo</th>
-                        <th scope="col">Cintura</th>
-                        <th scope="col">Abdome</th>
-                        <th scope="col">Quadril</th>
-                        <th scope="col">Coxa Distal Direita</th>
-                        <th scope="col">Coxa Distal Esquerda</th>
-                        <th scope="col">Coxa Medial Direita</th>
-                        <th scope="col">Coxa Medial Esquerda</th>
-                        <th scope="col">Coxa Prossimal Direita</th>
-                        <th scope="col">Coxa Prossimal Esquerda</th>
-                        <th scope="col">Panturrilha Direita</th>
-                        <th scope="col">Panturrilha Esquerda</th>
-                        <th scope="col">Classificação CQ</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for p in circuferencias %}
+        <div class="container">
+            <div class="table-responsive">
+                <table class="table table-dark">
+                    <thead class="flex-column">
                         <tr>
-                            <td scope="row">{{ p.pescoco  }}</td>
-                            <td scope="row">{{ p.ombro }}</a></td>
-                            <td scope="row">{{ p.torax  }}</td>
-                            <td scope="row">{{ p.bracodireito  }}</td>
-                            <td scope="row">{{ p.bracoesquerdo }}</td>
-                            <td scope="row">{{ p.bracodireitocontraido }}</td>
-                            <td scope="row">{{ p.bracoesquerdocontraido }}</td>
-                            <td scope="row">{{ p.antebracodireito }}</td>
-                            <td scope="row">{{ p.antebracoesquerdo }}</td>
-                            <td scope="row">{{ p.cintura }}</td>
-                            <td scope="row">{{ p.abdome }}</td>
-                            <td scope="row">{{ p.quadril }}</td>
-                            <td scope="row">{{ p.coxadistaldireita }}</td>
-                            <td scope="row">{{ p.coxadistalesquerda }}</td>
-                            <td scope="row">{{ p.coxamedialdireita }}</td>
-                            <td scope="row">{{ p.coxamedialesquerda }}</td>
-                            <td scope="row">{{ p.coxaproximaldireita }}</td>
-                            <td scope="row">{{ p.coxaproximalesquerda }}</td>
-                            <td scope="row">{{ p.panturrilhadireita }}</td>
-                            <td scope="row">{{ p.panturrilhaesquerda }}</td>
-                            <td scope="row">{{ p.classificacao }}</td>
+                            <th scope="col">Consulta</th>
+                            <th scope="col">Pescoço</th>
+                            <th scope="col">Ombro</th>
+                            <th scope="col">Torax</th>
+                            <th scope="col">Braco Direito</th>
+                            <th scope="col">Braco Esquerdo</th>
+                            <th scope="col">Braco Direito Contraido</th>
+                            <th scope="col">Braco Esquerdo Contraido</th>
+                            <th scope="col">Antebraco Direito</th>
+                            <th scope="col">Antebraco Esquerdo</th>
+                            <th scope="col">Cintura</th>
+                            <th scope="col">Abdome</th>
+                            <th scope="col">Quadril</th>
+                            <th scope="col">Coxa Distal Direita</th>
+                            <th scope="col">Coxa Distal Esquerda</th>
+                            <th scope="col">Coxa Medial Direita</th>
+                            <th scope="col">Coxa Medial Esquerda</th>
+                            <th scope="col">Coxa Prossimal Direita</th>
+                            <th scope="col">Coxa Prossimal Esquerda</th>
+                            <th scope="col">Panturrilha Direita</th>
+                            <th scope="col">Panturrilha Esquerda</th>
+                            <th scope="col">Classificação CQ</th>
                         </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody>
+                        {% for p in circuferencias %}
+                            <tr>
+                                <td scope="row">{{ p.criado  }}</td>
+                                <td scope="row">{{ p.pescoco  }}</td>
+                                <td scope="row">{{ p.ombro }}</a></td>
+                                <td scope="row">{{ p.torax  }}</td>
+                                <td scope="row">{{ p.bracodireito  }}</td>
+                                <td scope="row">{{ p.bracoesquerdo }}</td>
+                                <td scope="row">{{ p.bracodireitocontraido }}</td>
+                                <td scope="row">{{ p.bracoesquerdocontraido }}</td>
+                                <td scope="row">{{ p.antebracodireito }}</td>
+                                <td scope="row">{{ p.antebracoesquerdo }}</td>
+                                <td scope="row">{{ p.cintura }}</td>
+                                <td scope="row">{{ p.abdome }}</td>
+                                <td scope="row">{{ p.quadril }}</td>
+                                <td scope="row">{{ p.coxadistaldireita }}</td>
+                                <td scope="row">{{ p.coxadistalesquerda }}</td>
+                                <td scope="row">{{ p.coxamedialdireita }}</td>
+                                <td scope="row">{{ p.coxamedialesquerda }}</td>
+                                <td scope="row">{{ p.coxaproximaldireita }}</td>
+                                <td scope="row">{{ p.coxaproximalesquerda }}</td>
+                                <td scope="row">{{ p.panturrilhadireita }}</td>
+                                <td scope="row">{{ p.panturrilhaesquerda }}</td>
+                                <td scope="row">{{ p.classificacao }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            
+            </div>
         </div>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <div class="d-flex">
