--- a/plano/templates/circuferencias.html
+++ b/plano/templates/circuferencias.html
@@ -77,6 +77,9 @@
         <div class="d-flex">
             <button type="button" class="btn btn-primary ml-2" data-toggle="modal" data-target="#modalMedida">Adicionar Medida</button>
         </div>
+        <div class="d-flex">
+            <a href="{% url 'antropometria' paciente.id %}" class="btn btn-primary">Voltar para Antropometria </a>
+        </div>
     </div>
 
     {% include 'fazercircuferencia.html' %}
