--- a/plano/templates/paciente.html
+++ b/plano/templates/paciente.html
@@ -16,6 +16,7 @@
         <p>Início: {{ paciente.criado }}</p>
         <p>Data de Nascimento: {{ paciente.nascimento }}</p>
         <p>Idade: {{idade}} anos</p>
+        <p>Gênero: {{ paciente.genero }} </p>
         <br><br>
         <h2>Medidas</h2>
         
