--- a/plano/templates/circuferencias.html
+++ b/plano/templates/circuferencias.html
@@ -18,7 +18,7 @@
                     <thead class="flex-column">
                         <tr>
                             <th scope="col">Consulta</th>
-                            <th scope="col">Classificação CQ</th>
+                            <th scope="col">RCQ</th>
                             <th scope="col">Pescoço</th>
                             <th scope="col">Ombro</th>
                             <th scope="col">Torax</th>
@@ -46,7 +46,7 @@
                         {% for p in circuferencias %}
                             <tr>
                                 <td scope="row">{{ p.criado  }}</td>
-                                <td scope="row">{{ p.classificacao }}</td>
+                                <td scope="row">{{ p.classificacao }} {{p.rcq}}</td>
                                 <td scope="row">{{ p.pescoco  }}</td>
                                 <td scope="row">{{ p.ombro }}</a></td>
                                 <td scope="row">{{ p.torax  }}</td>
