--- a/plano/templates/paciente.html
+++ b/plano/templates/paciente.html
@@ -26,6 +26,11 @@
             <a href="{% url 'plano' paciente.id %}" class="btn btn-primary">Fazer Plano</a>
             <a href="{% url 'antropometria' paciente.id %}" class="btn btn-primary">Antropometria</a>
         </div>
+
+        <div class="d-flex">
+        <a href="{% url 'painel' %}" class="btn btn-primary">Voltar para painel</a>
+        </div>
+        
     </div> 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
