--- a/plano/templates/plano.html
+++ b/plano/templates/plano.html
@@ -36,7 +36,7 @@
                         <td scope="row">{{ cafe.quantidade }}</td>
                         <td scope="row">{{ cafe.alimento.peso }}</td>
                         <td scope="row">{{ cafe.alimento }}</td>
-                        <td scope="row">{{ cafe.alimento.proteina }}</td>
+                        <td scope="row">{{ cafe.alimento.proteina }} g</td>
                     </tr>
                 {% endfor %}
             </tbody>
@@ -60,7 +60,7 @@
                         <form method="post">
                             {% csrf_token %}
                             <input type="hidden" name="paciente" value="{{ paciente_form.id }}">
-                            <input type="hidden" name="refeicoes" value="6">
+                            <input type="hidden" name="refeicoes" value="1">
                             <br><br>
                             {{ form.quantidade }}
                             {{ form.alimento }}
@@ -115,7 +115,7 @@
                         <form method="post">
                             {% csrf_token %}
                             <input type="hidden" name="paciente" value="{{ paciente_form.id }}">
-                            <input type="hidden" name="refeicoes" value="7">
+                            <input type="hidden" name="refeicoes" value="2">
                             <br><br>
                             {{ form.quantidade }}
                             {{ form.alimento }}
@@ -170,7 +170,7 @@
                         <form method="post">
                             {% csrf_token %}
                             <input type="hidden" name="paciente" value="{{ paciente_form.id }}">
-                            <input type="hidden" name="refeicoes" value="8">
+                            <input type="hidden" name="refeicoes" value="3">
                             <br><br>
                             {{ form.quantidade }}
                             {{ form.alimento }}
@@ -225,7 +225,7 @@
                          <form method="post">
                              {% csrf_token %}
                              <input type="hidden" name="paciente" value="{{ paciente_form.id }}">
-                             <input type="hidden" name="refeicoes" value="9">
+                             <input type="hidden" name="refeicoes" value="4">
                              <br><br>
                              {{ form.quantidade }}
                              {{ form.alimento }}
@@ -280,7 +280,7 @@
                          <form method="post">
                              {% csrf_token %}
                              <input type="hidden" name="paciente" value="{{ paciente_form.id }}">
-                             <input type="hidden" name="refeicoes" value="10">
+                             <input type="hidden" name="refeicoes" value="5">
                              <br><br>
                              {{ form.quantidade }}
                              {{ form.alimento }}
@@ -335,7 +335,7 @@
                          <form method="post">
                              {% csrf_token %}
                              <input type="hidden" name="paciente" value="{{ paciente_form.id }}">
-                             <input type="hidden" name="refeicoes" value="11">
+                             <input type="hidden" name="refeicoes" value="6">
                              <br><br>
                              {{ form.quantidade }}
                              {{ form.alimento }}
@@ -390,7 +390,7 @@
                          <form method="post">
                              {% csrf_token %}
                              <input type="hidden" name="paciente" value="{{ paciente_form.id }}">
-                             <input type="hidden" name="refeicoes" value="12">
+                             <input type="hidden" name="refeicoes" value="7">
                              <br><br>
                              {{ form.quantidade }}
                              {{ form.alimento }}
