--- a/plano/templates/dieta.html
+++ b/plano/templates/dieta.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar alimento</title>
+    <link rel="shortcut icon" href="{% static 'css/favicon.ico' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
@@ -17,6 +18,7 @@
             {{ form.refeicoes }}
             <br><br>
             {{ form.quantidade }}
+            <br>
             {{ form.alimento }}
             <input type="submit" value="Salvar">
         </form>
