--- a/plano/templates/criar_plano.html
+++ b/plano/templates/criar_plano.html
@@ -1,28 +1,30 @@
 {% load static %}
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paciente</title>
+    <title>Criar Novo Plano</title>
     <link rel="shortcut icon" href="{% static 'css/favicon.ico' %}" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
-<body class="fundo">
+<body>
     <div class="container">
-        <h1>Paciente</h1>
-        <h3>{{ paciente.nome }}</h3>
-        <div class="d-flex">
-            <a href="{% url 'imc' paciente.id %}" class="btn btn-primary">IMC</a>
-            <a href="{% url 'circuferencias' paciente.id %}" class="btn btn-primary">CIRCUNFERÊNCIAS</a>
-            <a href="{% url 'imc' paciente.id %}" class="btn btn-primary">% GORDURA</a>
-            
-        </div>
-        <div class="d-flex">
-            <a href="{% url 'paciente' paciente.id %}" class="btn btn-primary">Voltar para paciente</a>
-        </div>
-    </div> 
+        <h1>Criar Novo Plano</h1>
+        <form method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="id_nome">Nome do Plano:</label>
+                {{ form.nome }}
+            </div>
+            <button type="submit" class="btn btn-primary">Salvar</button>
+        </form>
+        <a href="{% url 'paciente' paciente.id %}" class="btn btn-secondary mt-3">Cancelar</a>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
+
