--- a/plano/templates/painel.html
+++ b/plano/templates/painel.html
@@ -5,9 +5,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="{% static 'css/favicon.ico' %}" type="image/x-icon">
     <title>Painel</title>
+    <link rel="shortcut icon" href="{% static 'css/favicon.ico' %}" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    
 </head>
 <body>
     <div class="container">
@@ -27,7 +30,7 @@
                 {% for p in pacientes %}
                     <tr>
                         <td scope="row">{{ p.id }}</td>
-                        <td scope="row"><a href="{% url 'paciente' p.id %}">{{ p.nome }}</a></td>
+                        <td scope="row"><a href="{% url 'pacientes' p.id%}">{{ p.nome }}</a></td>
                         <td scope="row">{{ p.telefone }}</td>
                         <td scope="row">{{ p.email }}</td>
                         <td scope="row">{{ p.criado }}</td>
