--- a/plano/templates/plano.html
+++ b/plano/templates/plano.html
@@ -4,20 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paciente</title>
+    <link rel="shortcut icon" href="{% static 'css/favicon.ico' %}" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <div class="container">
-        <h1>{{ paciente_form.nome}}</h1><br><br>
-        <a class="btn my-3"  href="{% url 'paciente' paciente_form.id %}">Voltar para paciente</a>
-        <h2>Total de proteina</h2>
-        <p>Total = {{ total_proteina }}</p>
-        <form method="post">
-            {% csrf_token %}
-            <input type="date" name="data_especifica" value="{{ data_filtro }}">
-            <input type="submit" value="Filtrar">
-        </form>
+        <h1>Plano: {{ plano.nome }}</h1><br>
+        <h2>Paciente: {{ plano.paciente }}</h2>
+        <a class="btn my-3" href="{% url 'pacientes' paciente.id  %}">Voltar para paciente</a>
+        <p>Total de proteína = {{ total_proteina }}</p>
+        <p>Total de carboidrato = {{ total_carboidrato }}</p>
 
         <!-- Tabela café -->
         <h2>Café da manhã</h2>
@@ -28,6 +25,7 @@
                     <th scope="col">Peso</th>
                     <th scope="col">Alimento</th>
                     <th scope="col">Proteina</th>
+                    <th scope="col">Carboidrato</th>
                 </tr>
             </thead>
             <tbody>
@@ -37,6 +35,7 @@
                         <td scope="row">{{ cafe.alimento.peso }}</td>
                         <td scope="row">{{ cafe.alimento }}</td>
                         <td scope="row">{{ cafe.alimento.proteina }} g</td>
+                        <td scope="row">{{ cafe.alimento.carboidrato }} g</td>
                     </tr>
                 {% endfor %}
             </tbody>
@@ -56,15 +55,22 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <h1>Adicionar Alimento</h1>
                         <form method="post">
                             {% csrf_token %}
-                            <input type="hidden" name="paciente" value="{{ paciente_form.id }}">
-                            <input type="hidden" name="refeicoes" value="1">
-                            <br><br>
-                            {{ form.quantidade }}
+                            
+                            <input type="hidden" name="paciente" value="{{ paciente.id }}">
+                            <input type="hidden" name="refeicoes" value="1"> <!-- Defina o valor correto de refeicoes conforme necessário -->
+                            <input type="hidden" name="plano" value="{{ plano.id }}">
+                        
+                            <h3>Plano: {{ plano.nome }}</h3>
                             <br>
+                            <p>Quantidade:</p>
+                            {{ form.quantidade }}
+                            <br><br>
+                            <p>Alimento:</p>
                             {{ form.alimento }}
+                            <br>
+                            <br>
                             <input type="submit" value="Salvar">
                         </form>
                     </div>
@@ -112,15 +118,21 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <h1>Adicionar Alimento</h1>
                         <form method="post">
                             {% csrf_token %}
                             <input type="hidden" name="paciente" value="{{ paciente_form.id }}">
                             <input type="hidden" name="refeicoes" value="2">
-                            <br><br>
-                            {{ form.quantidade }}
+                            <input type="hidden" name="plano" value="{{ plano.id }}">
+
+                            <h3>Plano: {{ plano.nome }}</h3>
                             <br>
+                            <p>Quantidade:</p>
+                            {{ form.quantidade }}
+                            <br><br>
+                            <p>Alimento:</p>
                             {{ form.alimento }}
+                            <br>
+                            <br>
                             <input type="submit" value="Salvar">
                         </form>
                     </div>
@@ -168,14 +180,21 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <h1>Adicionar Alimento</h1>
                         <form method="post">
                             {% csrf_token %}
                             <input type="hidden" name="paciente" value="{{ paciente_form.id }}">
                             <input type="hidden" name="refeicoes" value="3">
-                            <br><br>
+                            <input type="hidden" name="plano" value="{{ plano.id }}">
+
+                            <h3>Plano: {{ plano.nome }}</h3>
+                            <br>
+                            <p>Quantidade:</p>
                             {{ form.quantidade }}
+                            <br><br>
+                            <p>Alimento:</p>
                             {{ form.alimento }}
+                            <br>
+                            <br>
                             <input type="submit" value="Salvar">
                         </form>
                     </div>
@@ -223,14 +242,21 @@
                          </button>
                      </div>
                      <div class="modal-body">
-                         <h1>Adicionar Alimento</h1>
                          <form method="post">
                              {% csrf_token %}
                              <input type="hidden" name="paciente" value="{{ paciente_form.id }}">
                              <input type="hidden" name="refeicoes" value="4">
-                             <br><br>
-                             {{ form.quantidade }}
-                             {{ form.alimento }}
+                             <input type="hidden" name="plano" value="{{ plano.id }}">
+
+                            <h3>Plano: {{ plano.nome }}</h3>
+                            <br>
+                            <p>Quantidade:</p>
+                            {{ form.quantidade }}
+                            <br><br>
+                            <p>Alimento:</p>
+                            {{ form.alimento }}
+                            <br>
+                            <br>
                              <input type="submit" value="Salvar">
                          </form>
                      </div>
@@ -278,14 +304,21 @@
                          </button>
                      </div>
                      <div class="modal-body">
-                         <h1>Adicionar Alimento</h1>
                          <form method="post">
                              {% csrf_token %}
                              <input type="hidden" name="paciente" value="{{ paciente_form.id }}">
                              <input type="hidden" name="refeicoes" value="5">
-                             <br><br>
-                             {{ form.quantidade }}
-                             {{ form.alimento }}
+                             <input type="hidden" name="plano" value="{{ plano.id }}">
+
+                            <h3>Plano: {{ plano.nome }}</h3>
+                            <br>
+                            <p>Quantidade:</p>
+                            {{ form.quantidade }}
+                            <br><br>
+                            <p>Alimento:</p>
+                            {{ form.alimento }}
+                            <br>
+                            <br>
                              <input type="submit" value="Salvar">
                          </form>
                      </div>
@@ -333,14 +366,21 @@
                          </button>
                      </div>
                      <div class="modal-body">
-                         <h1>Adicionar Alimento</h1>
                          <form method="post">
                              {% csrf_token %}
                              <input type="hidden" name="paciente" value="{{ paciente_form.id }}">
                              <input type="hidden" name="refeicoes" value="6">
-                             <br><br>
-                             {{ form.quantidade }}
-                             {{ form.alimento }}
+                             <input type="hidden" name="plano" value="{{ plano.id }}">
+
+                            <h3>Plano: {{ plano.nome }}</h3>
+                            <br>
+                            <p>Quantidade:</p>
+                            {{ form.quantidade }}
+                            <br><br>
+                            <p>Alimento:</p>
+                            {{ form.alimento }}
+                            <br>
+                            <br>
                              <input type="submit" value="Salvar">
                          </form>
                      </div>
@@ -388,14 +428,21 @@
                          </button>
                      </div>
                      <div class="modal-body">
-                         <h1>Adicionar Alimento</h1>
                          <form method="post">
                              {% csrf_token %}
                              <input type="hidden" name="paciente" value="{{ paciente_form.id }}">
                              <input type="hidden" name="refeicoes" value="7">
-                             <br><br>
-                             {{ form.quantidade }}
-                             {{ form.alimento }}
+                             <input type="hidden" name="plano" value="{{ plano.id }}">
+
+                            <h3>Plano: {{ plano.nome }}</h3>
+                            <br>
+                            <p>Quantidade:</p>
+                            {{ form.quantidade }}
+                            <br><br>
+                            <p>Alimento:</p>
+                            {{ form.alimento }}
+                            <br>
+                            <br>
                              <input type="submit" value="Salvar">
                          </form>
                      </div>
