--- a/plano/templates/fazercircuferencia.html
+++ b/plano/templates/fazercircuferencia.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medida</title>
-    <link rel="shortcut icon" href="{% static 'css/favicon.ico' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'favicon/favicon.ico' %}" type="image/x-icon">
 </head>
 <body>
     
